# argo

./: Makefile  argo.cabal  argo.lang  testargo
cmd/: Main.hs
lib/: Import.hs
lib/Data/: Argo.hs
lib/Data/Argo/: AsThing.hs  Expression.hs  MonoExpression.hs  Number.hs  Object.hs  Read.hs  Record.hs  StdLib.hs  SubValue.hs  TextFile.hs  Thing.hs  Value.hs
lib/Data/Argo/Read/: Lexical.hs  RegularExpression.hs
lib/Data/Argo/StdLib/: Action.hs  File.hs  Process.hs  Types.hs
test/: Main.hs  TestUtil.hs
