name:                argo
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-2
license-file:        LICENSE
author:              Ashley Yakeley
maintainer:          Ashley Yakeley <ashley@semantic.org>
copyright:           Ashley Yakeley
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
    hs-source-dirs: lib
    exposed-modules:    
        Data.Argo
        Data.Argo.Expression
        Data.Argo.MonoExpression
        Data.Argo.Value
        Data.Argo.Read
        Data.Argo.StdLib
    other-modules:      
        Import
    build-depends:
        base == 4.6.*,
        transformers >= 0.3,
        witness == 0.2.*,
        utf8-string >= 0.3.7
    extensions:         
        NoImplicitPrelude 
        ScopedTypeVariables 
        FlexibleContexts 
        FlexibleInstances 
        KindSignatures
        GADTs
        ImpredicativeTypes
        PolyKinds
        TypeFamilies
        MultiParamTypeClasses
        ConstraintKinds
        RecursiveDo
    ghc-options: -Wall

executable argo
    hs-source-dirs: cmd
    main-is: Main.hs
    build-depends:
        base == 4.6.*,
        transformers >= 0.3,
        argo == 0.1.0.0,
        utf8-string >= 0.3.7,
        directory >= 1.2,
        filepath >= 1.3
    extensions:         
        ScopedTypeVariables
        FlexibleContexts
        FlexibleInstances
        KindSignatures
        GADTs
        ImpredicativeTypes
        PolyKinds
        TypeFamilies
        MultiParamTypeClasses
        ConstraintKinds
    ghc-options: -Wall

test-suite tests
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    extensions: 
        ScopedTypeVariables
        FlexibleContexts
        FlexibleInstances
        KindSignatures
        GADTs
        ImpredicativeTypes
        PolyKinds
        TypeFamilies
        MultiParamTypeClasses
        ConstraintKinds
    ghc-options: -Wall
    build-depends: 
        base == 4.6.*,
        transformers >= 0.3,
        argo == 0.1.0.0,
        test-framework == 0.8.*
    main-is: Main.hs
    other-modules:
        TestUtil

