name:                argo
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-2
license-file:        LICENSE
author:              Ashley Yakeley
maintainer:          Ashley Yakeley <ashley@semantic.org>
copyright:           Ashley Yakeley
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
    hs-source-dirs: lib
    exposed-modules:
        Data.Argo
        Data.Argo.Value
        Data.Argo.Object
        Data.Argo.Read
        Data.Argo.TextFile
        Data.Argo.StdLib
    other-modules:
        Import
        Data.Argo.Number
        Data.Argo.Read.Lexical
        Data.Argo.Read.RegularExpression
        Data.Argo.StdLib.Types
        Data.Argo.StdLib.File
        Data.Argo.StdLib.Process
    build-depends:
        base >= 4.9 && < 5,
        transformers,
        witness,
        expression,
        bytestring,
        utf8-string,
        filepath,
        directory,
        unix,
        parsec
    extensions:
        NoImplicitPrelude
        ScopedTypeVariables
        FlexibleContexts
        FlexibleInstances
        KindSignatures
        RankNTypes
        GADTs
        PolyKinds
        TypeFamilies
        MultiParamTypeClasses
        ConstraintKinds
        RecursiveDo
        ImplicitParams
        UndecidableInstances
        PatternGuards
    ghc-options: -Wall

executable argo
    hs-source-dirs: cmd
    main-is: Main.hs
    build-depends:
        base >= 4.9 && < 5,
        transformers,
        argo,
        utf8-string,
        unix
    extensions:
        ScopedTypeVariables
        FlexibleContexts
        FlexibleInstances
        KindSignatures
        GADTs
        PolyKinds
        TypeFamilies
        MultiParamTypeClasses
        ConstraintKinds
        ImplicitParams
    ghc-options: -Wall

test-suite tests
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    extensions:
        ScopedTypeVariables
        FlexibleContexts
        FlexibleInstances
        KindSignatures
        GADTs
        PolyKinds
        TypeFamilies
        MultiParamTypeClasses
        ConstraintKinds
        ImplicitParams
    ghc-options: -Wall
    build-depends:
        base >= 4.9 && < 5,
        bytestring,
        transformers,
        argo,
        test-framework
    main-is: Main.hs
    other-modules:
        TestUtil
